# DocuRAG

./: .gitignore  README.md  main.py  pyproject.toml
app/: llm.py  main.py  models.py  rag.py  utils.py
